--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="DontBeLateWeb">
         <wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/tst"/>
         <property name="java-output-path" value="/DontBeLateWeb/build/classes"/>
         <property name="context-root" value="DontBeLateWeb"/>
     </wb-module>
